[package]
name = "iworth"
version = "0.1.0"
authors = ["elielnfinic <elimek2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
url = { version = "2.2.2", features = ["serde"] }
serde = "1"
serde_json = "1"
futures = "0.3"
mongodb = "2.2.1"
